#
# The Alluxio Open Foundation licenses this work under the Apache License, version 2.0
# (the "License"). You may not use this work except in compliance with the License, which is
# available at www.apache.org/licenses/LICENSE-2.0
#
# This software is distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
# either express or implied, as more fully set forth in the License.
#
# See the NOTICE file distributed with this work for information regarding copyright ownership.
#

[package]
name = "rspdk"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = [ "Alluxio Developers" ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
spdk-sys = { path = "spdk-sys" }
log = "0.4"
futures-lite = "1.13"
thiserror = "1.0"
rand = "0.8"
